--- a/public/global.css
+++ b/public/global.css
@@ -10,7 +10,7 @@ h1,h2,h3,p{
 	padding: 0;
         margin:0;
 }
-
+*{box-sizing: border-box;}
 body {
 	font-family: 'Open Sans' , Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -134,4 +134,10 @@ button:focus{
 }
 .full-row {
 	width: 99%;
+}
+.home-page-container {
+	height: 100vh;
+	width: 100vw;
+	overflow-y: auto;
+	padding-top:80px;
 }
