Responsive design bitch

--- a/public/global.css
+++ b/public/global.css
@@ -140,3 +140,7 @@ button:focus{
 	overflow-y: auto;
 	padding-top:60px;
 }
+@media only screen and (max-width: 600px) {
+.home-page-container{height:auto;}
+body{height:auto;}
+}
